# light-curve-feature

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/: copilot-instructions.md  dependabot.yml
.github/copilot/: README.md  agent-setup.sh
.github/workflows/: copilot-setup-steps.yml  test.yml
benches/: extractor.rs  fft_crates.rs  fit.rs  lib.rs  multicolor.rs  peak_indices.rs  periodogram.rs  recurrent_sin_cos.rs  sin_cos.rs
examples/: plot_snia_curve_fits.rs
src/: array_stats.rs  error.rs  evaluator.rs  extractor.rs  feature.rs  float_trait.rs  lib.rs  lnerfc.rs  macros.rs  multicolor.rs  number_ending.rs  parabola_fit.rs  peak_indices.rs  prelude.rs  sorted_array.rs  straight_line_fit.rs  tests.rs  time_series.rs  types.rs
src/data/: data_sample.rs  mod.rs  multi_color_time_series.rs  sorted_array.rs  time_series.rs
src/features/: _periodogram_peaks.rs  adf.rs  amplitude.rs  anderson_darling_normal.rs  bazin_fit.rs  beyond_n_std.rs  bins.rs  biweight_scale.rs  bootstrap.rs  chi2_pvar.rs  cusum.rs  duration.rs  eta.rs  eta_e.rs  excess_variance.rs  inter_percentile_range.rs  kurtosis.rs  lafler_kinman.rs  lafler_kinman_string_length.rs  linear_fit.rs  linear_trend.rs  linexp_fit.rs  magnitude_percentage_ratio.rs  maximum_slope.rs  maximum_time_interval.rs  mean.rs  mean_variance.rs  median.rs  median_absolute_deviation.rs  median_buffer_range_percentage.rs  minimum_time_interval.rs  mod.rs  observation_count.rs  otsu_split.rs  parabola_fit.rs  percent_amplitude.rs  percent_difference_magnitude_percentile.rs  periodogram.rs  qn_scale.rs  reduced_chi2.rs  (+10 more)
src/graph/: mod.rs
src/multicolor/: mod.rs  monochrome_feature.rs  multicolor_bins.rs  multicolor_bootstrap.rs  multicolor_evaluator.rs  multicolor_extractor.rs  multicolor_feature.rs  per_band_feature.rs
src/multicolor/features/: color_of_maximum.rs  color_of_median.rs  color_of_minimum.rs  color_spread.rs  mod.rs  multi_color_periodogram.rs
src/multicolor/passband/: dump_passband.rs  labeled_passband.rs  mod.rs  monochrome_passband.rs  passband_trait.rs  string_passband.rs
src/nl_fit/: bounds.rs  ceres.rs  cobyla.rs  constants.rs  curve_fit.rs  data.rs  evaluator.rs  lmsder.rs  mcmc.rs  mod.rs  nuts.rs
src/nl_fit/prior/: ln_prior.rs  ln_prior_1d.rs
src/periodogram/: fft_fftw.rs  fft_rustfft.rs  fft_trait.rs  freq.rs  mod.rs  power_direct.rs  power_fft.rs  power_trait.rs  recurrent_sin_cos.rs  sin_cos_iterator.rs
src/periodogram/fft/: mod.rs
src/transformers/: bazin_fit.rs  clipped_lg.rs  composed.rs  linexp_fit.rs  mod.rs  transformer.rs  villar_fit.rs
test-util/: Cargo.toml
test-util/src/: lc_data.rs  lib.rs
test-util/src/lc_data/: csv_parser.rs  from_issues.rs  mod.rs  record.rs  rrlyr.rs  snia.rs  types.rs
