[package]
name = "light-curve-feature"
version = "0.5.3"
description = "Feature extractor from noisy time series"
categories = ["science"]
keywords = ["astronomy", "time-series"]
repository = "https://github.com/light-curve/light-curve-feature"
readme = "README.md"
authors = ["Konstantin Malanchev <hombit@gmail.com>"]
license = "GPL-3.0-or-later"
rust-version = "1.57"
edition = "2021"

[lib]
bench = false

[features]
default = ["fftw-source"]
fftw-system = ["fftw/system"]
fftw-source = ["fftw/source"]
fftw-mkl = ["fftw/intel-mkl"]
gsl = ["GSL/v2_1"]

[profile.release]
lto = true
codegen-units = 1

[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
# it is a dependency of intel-mkl-tool, we pin it to temporary solve
# https://github.com/rust-math/intel-mkl-src/issues/68
anyhow = "<1.0.49"
conv = "^0.3.3"
emcee = "^0.3.0"
emcee_rand = { version = "^0.3.15", package = "rand" }
enum_dispatch = "^0.3.9"
fftw = { version = "^0.7", default-features = false }
GSL = { version = "^6", default-features = false, optional = true }
itertools = "^0.10"
lazy_static = "^1.4"
libm = "^0.2"
macro_const = "^0.1"
ndarray = "^0.15"
ndarray-stats = "^0.5"
num-complex = "^0.3"
num-traits = "^0.2"
schemars = "^0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
thread_local = "1.1,<1.1.7" # 1.1.7 requires rust 1.59
unzip3 = "1"

[dev-dependencies]
light-curve-feature-test-util = { path = "test-util" }
approx = "0.5"
chfft = "0.3.4"
clap = { version = "3.2.6", features = ["std", "color", "suggestions", "derive", "wrap_help", "unstable-v4"] }
criterion = "0.4"
hyperdual = "1.1"
light-curve-common = "0.1.0"
plotters = { version = "0.3.1", default-features = false, features = ["errorbar", "line_series", "ttf"] }
plotters-bitmap = "0.3.1"
rand = "0.7"
rand_distr = "0.2"
rayon = "1.5"
realfft= "3.1"
rustfft = "6.1"
serde_json = "1.0"
serde_test = "1.0"
serde_type_name = "0.2"

[[bench]]
name = "benchmark"
path = "benches/lib.rs"
harness = false

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "katex-header.html",
]
no-default-features = true
features = ["fftw-system", "gsl"]
