[package]
name = "light-curve-feature-test-util"
version = "0.0.0"
description = "Common test utilities for light-curve-feature tests, benchmarks and examples"
repository = "https://github.com/light-curve/light-curve-feature"
authors = ["Konstantin Malanchev <hombit@gmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
csv = "1.1"
conv = "0.3.3"
include_dir = {version = "0.7.3", features = ["glob"]}
itertools = "0.10.5"
light-curve-feature = { path = "..", default-features = false }
serde = { version = "^1.0", features = ["derive"] }
thiserror = "1"
